--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
-title_separator          : "-"
-name                     : "Kim Byunghun"
+title                    : "김병훈 - ioioi.dev"
+title_separator          : "+"
+name                     : "김병훈 Kim Byunghun"
 description              : "웹개발자 김병훈입니다."
 url                      : "https://kbh.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -106,11 +106,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  name             : "김병훈"
+  avatar           : "https://avatars3.githubusercontent.com/u/37905503?s=460&v=4" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "웹개발자 김병훈입니다."
+  location         : "Daegu, Korea"
+  email            : ruberc@naver.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
