--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "김병훈 - ioioi.dev"
+title                    : "웹개발자의 기억상자"
 title_separator          : "+"
 name                     : "김병훈 Kim Byunghun"
 description              : "웹개발자 김병훈입니다."
