--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "웹개발자의 기억상자"
 title_separator          : "+"
 name                     : "김병훈 Kim Byunghun"
 description              : "웹개발자 김병훈입니다."
-url                      : "https://kbh.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://byunghunKim.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -114,7 +114,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:ruberc@naver.com
+      url: #mailto:ruberc@naver.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://ioioi.dev"
