--- a/_config.yml
+++ b/_config.yml
@@ -137,12 +137,12 @@ footer:
     #- label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url:
-    #- label: "Facebook"
-      #icon: "fab fa-fw fa-facebook-square"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: https://github.com/ByunghunKim/
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
